--- a/playerClient/index.html
+++ b/playerClient/index.html
@@ -7,5 +7,5 @@
 <body>
     <div id="deckPoint"></div>
     <grid id="cardBoard"></grid>
-    <script type="module" src="main.js" ></script>
+    <script type="module" src="JavaScript/main.js" ></script>
 </body>
