--- a/playerClient/index.html
+++ b/playerClient/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="deckPoint"></div>
-    <grid id="cardBoard"></grid>
+    <div id="cardPlacementSlots"></div>
+    <div id="handPoint"></div>
     <script type="module" src="JavaScript/main.js" ></script>
 </body>
