pushing so we can make dev branch

--- a/Public/index.html
+++ b/Public/index.html
@@ -2,7 +2,16 @@
 <head>
     <title>rootIndex</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>Zup, du har hittat root index, det är här du väljer om du vill va server eller spelare. Coolt va?</h1>
+    <button style="width:200px; height:100px;">Host server on this device</button>
+    <div style="margin-top: 30px; width: 300px; margin-left: 50%; transform: translateX(-50%);">
+        <h1>Want to play?</h1>
+        Join server bellow
+        <br>
+        <input value="" style="margin: 20px 0"> </input>
+        <button>Join Server</button>
+    </div>
+    
     <script type="module" src="" ></script>
 </body>
