test commit for new dev branch

--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
         <h1>Want to play?</h1>
         Join server bellow
         <br>
-        <input value="" style="margin: 20px 0"> </input>
+        <input value="" style="margin: 20px"> </input>
         <button>Join Server</button>
     </div>
     
