did stuff in root index

--- a/Public/index.html
+++ b/Public/index.html
@@ -7,11 +7,14 @@
     <button style="width:200px; height:100px;">Host server on this device</button>
     <div style="margin-top: 30px; width: 300px; margin-left: 50%; transform: translateX(-50%);">
         <h1>Want to play?</h1>
-        Join server bellow
+        Enter server bellow
         <br>
-        <input value="" style="margin: 20px"> </input>
-        <button>Join Server</button>
+        <input 
+            id="serverIP" value="" placeholder="Enter Server adress" type="text"
+            style="margin: 20px 0; height: 30px;" 
+        ></input>
+        <button id="klickedJoinServerBtn" style="height:30px;">Join Server</button>
     </div>
     
-    <script type="module" src="" ></script>
+    <script type="module" src="rootMain.js"></script>
 </body>
