added server page

--- a/Public/index.html
+++ b/Public/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style="text-align: center;">
     <h1>Zup, du har hittat root index, det är här du väljer om du vill va server eller spelare. Coolt va?</h1>
-    <button style="width:200px; height:100px;">Host server on this device</button>
+    <button id="hostServer" style="width:200px; height:100px;">Host server on this device</button>
     <div style="margin-top: 30px; width: 300px; margin-left: 50%; transform: translateX(-50%);">
         <h1>Want to play?</h1>
         Enter server bellow
@@ -13,7 +13,7 @@
             id="serverIP" value="" placeholder="Enter Server adress" type="text"
             style="margin: 20px 0; height: 30px;" 
         ></input>
-        <button id="klickedJoinServerBtn" style="height:30px;">Join Server</button>
+        <button id="joinServerBtn" style="height:30px;">Join Server</button>
     </div>
     
     <script type="module" src="rootMain.js"></script>
