started working on card picking thing

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id=""></div>
+    <div id="cardSelectionPage"><h1 id="selectCardHeader">Select Cards</h1></div>
     <div id="cardPlacementSlots"></div>
     <div id="handPoint"></div>
     <script type="module" src="JavaScript/main.js" ></script>
