changed main font and did some styling

--- a/Public/serverClient/index.html
+++ b/Public/serverClient/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <head>
     <title>rootIndex</title>
+    <link rel="stylesheet" href="fonts/loadfont.css">
+    <style>
+        *{
+            font-family: MainFont;
+            font-weight: 400; 
+        }
+        h1{
+            font-size: 4em;
+            
+        }
+    </style>
 </head>
 <body style="text-align: center;">
     <h1>Zup, du har hittat serverns html sida</h1>    
