--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="cardSelectionPage"><h1 id="selectCardHeader">Select Cards</h1></div>
+    <div class="backgroundDiv"></div>
+    <div id="cardSelectionPage">
+        <h1 id="selectCardHeader">Select Cards</h1>
+        <div id="cardZone"></div>
+    </div>
     <div id="cardPlacementSlots"></div>
     <div id="handPoint"></div>
     <script type="module" src="JavaScript/main.js" ></script>
