--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,8 +7,8 @@
 <body>
     <div class="backgroundDiv"></div>
     <div id="cardSelectionPage">
-        <h1 id="selectCardHeader">Select Cards</h1>
-        <div id="cardZone"></div>
+        <h1 id="selectCardHeader"> -Select Cards- </h1>
+        <div id="cardPickZone"></div>
     </div>
     <div id="cardPlacementSlots"></div>
     <div id="handPoint"></div>
