--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -12,6 +12,6 @@
     </div>
     <div id="cardPlacementSlots"></div>
     <div id="handPoint"></div>
-    <button id="endTurn">End Turn</button>
+    <button id="endTurnBtn">End Turn</button>
     <script type="module" src="JavaScript/main.js" ></script>
 </body>
