did some more work on serverClient Page and started prepping for handling players

--- a/Public/serverClient/index.html
+++ b/Public/serverClient/index.html
@@ -26,6 +26,9 @@
         </div>
     </div>
    
-    <div id="scaleDiv"><h1>Div for the scale</h1></div>
+    <div id="scaleDiv">
+        <div id="player1Scale">7</div>
+        <div id="player2Scale">0</div>
+    </div>
     <script type="module" src=""></script>
 </body>
