added debug button

--- a/Public/serverClient/index.html
+++ b/Public/serverClient/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <button id="SelectionPageShow">Toggle Page</button>
+
     <div class="backgroundDiv"></div>
     <div id="IpDisplay">127.0.0.1:5500</div>
     <div id="BigBoiTextDisplay">-Server Client Page-</div>
@@ -24,11 +26,13 @@
             <div class="cardSlots"></div>
             <div class="cardSlots"></div>
         </div>
+        <div id="scaleDiv">
+            <div id="player1Scale">7</div>
+            <div id="player2Scale">0</div>
+        </div>
+
     </div>
    
-    <div id="scaleDiv">
-        <div id="player1Scale">7</div>
-        <div id="player2Scale">0</div>
-    </div>
-    <script type="module" src=""></script>
+    
+    <script type="module" src="./JavaScript/main.js"></script>
 </body>
