first step of createRoom() for hostClient

--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>rootIndex</title>
     <link rel="stylesheet" href="index.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket.js"></script>
 </head>
 <body>
     <button id="SelectionPageShow">Toggle Page</button>
