--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
     <title>Page</title>
-    
     <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <div class="backgroundDiv"></div>
     <div id="cardSelectionPage">
-        <h1 id="selectCardHeader"> -Select Cards- </h1>
+        <h1 id="selectCardHeader"> -Select Starting Cards- </h1>
         <div id="cardPickZone"></div>
     </div>
     <div id="cardPlacementSlots"></div>
