--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -5,6 +5,7 @@
     
 </head>
 <body>
+    <div id="joinServerPage"></div>
     <div class="backgroundDiv"></div>
     <div id="cardSelectionPage">
         <h1 id="selectCardHeader"> -Select Starting Cards- </h1>
