--- a/Public/index.html
+++ b/Public/index.html
@@ -16,15 +16,7 @@
 <body style="text-align: center;">
     <h1>Zup, du har hittat root index, det är här du väljer om du vill va server eller spelare. Coolt va?</h1>
     <button id="hostServer" style="width:200px; height:100px; font-size: 1.5em; font-weight: bold;">Host server on this device</button>
-    <div style="margin-top: 30px; width: 300px; margin-left: 50%; transform: translateX(-50%);">
-        <h1>Want to play?</h1>
-        <span style="font-size: 2em;">Enter server bellow</span>
-        <br>
-        <input 
-            id="serverIP" value="" placeholder="Enter Server adress" type="text"
-            style="margin: 20px 0; height: 30px; width: 100px; font-size: 1.2em;" 
-        ></input>
-        <button id="joinServerBtn" style="height:30px; font-size: 1.2em;">Join Server</button>
+    <button id="joinServerBtn" style="width:200px; height:100px; font-size: 1.5em; font-weight: bold;">Join Server</button>
     </div>
     
     <script type="module" src="rootMain.js"></script>
