--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -3,7 +3,7 @@
     <title>rootIndex</title>
     <link rel="stylesheet" href="index.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="socket.js"></script>
+    <script src="./JavaScript/socket.js"></script>
 </head>
 <body>
     <button id="SelectionPageShow">Toggle Page</button>
