--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -2,16 +2,33 @@
 <head>
     <title>Page</title>
     <link rel="stylesheet" href="index.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./JavaScript/socket.js"></script>
     
 </head>
 <body>
-    <div class="backgroundDiv"></div>
-    <div id="cardSelectionPage">
-        <h1 id="selectCardHeader"> -Select Starting Cards- </h1>
-        <div id="cardPickZone"></div>
-    </div>
-    <div id="cardPlacementSlots"></div>
-    <div id="handPoint"></div>
-    <button id="endTurnBtn">End Turn</button>
-    <script type="module" src="JavaScript/main.js" ></script>
+    <section id="login" class="onscreen">
+        <input 
+            id="serverIP" value="" placeholder="4-letter join code" type="text"
+            style="margin: 20px 0; height: 30px; width: 100px; font-size: 1.2em;" 
+        ></input><br>
+        <input 
+        id="loginPlayerName" value="" placeholder="Username" type="text"
+        style="margin: 20px 0; height: 30px; width: 100px; font-size: 1.2em;" 
+        ></input><br>
+        <button id="joinServerBtn" style="height:30px; font-size: 1.2em;" onclick="joinServer()">Join Server</button>
+        <br>
+        <div id="loginErrorText"></div>
+    </section>
+    <section id="selectstartercards">
+        <div class="backgroundDiv"></div>
+        <div id="cardSelectionPage">
+            <h1 id="selectCardHeader"> -Select Starting Cards- </h1>
+            <div id="cardPickZone"></div>
+        </div>
+        <div id="cardPlacementSlots"></div>
+        <div id="handPoint"></div>
+        <button id="endTurnBtn">End Turn</button>
+        <script type="module" src="JavaScript/main.js" ></script>
+    </section>
 </body>
