--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -5,7 +5,9 @@
     
 </head>
 <body>
-    <div id="joinServerPage"></div>
+    <div id="joinServerPage">
+        <div><input placeholder="Server address" type="text"><button>Join Server</button></div>
+    </div>
     <div class="backgroundDiv"></div>
     <div id="cardSelectionPage">
         <h1 id="selectCardHeader"> -Select Starting Cards- </h1>
