--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -3,7 +3,6 @@
     <title>Page</title>
     <link rel="stylesheet" href="index.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./JavaScript/socket.js"></script>
     
 </head>
 <body>
@@ -16,7 +15,7 @@
             id="loginPlayerName" value="" placeholder="Username" type="text"
             style="margin: 20px 0; height: 30px; width: 100px; font-size: 1.2em;" 
         ></input><br>
-        <button id="joinServerBtn" style="height:30px; width: 110px; font-size: 1.2em;" onclick="joinServer()">Join Server</button>
+        <button id="joinServerBtn" style="height:30px; width: 110px; font-size: 1.2em;">Join Server</button>
         <br>
         <div id="loginErrorText"></div>
         <div class="backgroundDiv"></div>
