forgot to link js script to hostClient's html

--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -3,6 +3,7 @@
     <title>rootIndex</title>
     <link rel="stylesheet" href="index.css">
     <script src="/socket.io/socket.io.js"></script>
+    <script src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
     <button id="SelectionPageShow">Toggle Page</button>
