--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>rootIndex</title>
     <!--<link rel="stylesheet" href="index.css">-->
+    <link rel="stylesheet" href="./../reset.css">
     <link rel="stylesheet" href="host2.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./JavaScript/hostSocket.js"></script>
