--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Page</title>
+    <link rel="stylesheet" href="./../reset.css">
     <link rel="stylesheet" href="index.css">
     <script src="/socket.io/socket.io.js"></script>
     
