--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -2,13 +2,15 @@
 <head>
     <title>rootIndex</title>
     <!--<link rel="stylesheet" href="index.css">-->
-    <link rel="stylesheet" href="./../reset.css">
-    <link rel="stylesheet" href="host2.css">
+    <!--<link rel="stylesheet" href="./../reset.css">-->
+    <!--<link rel="stylesheet" href="host2.css">-->
+    <link rel="stylesheet" href="index.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
     <section id="bodyPregame" class="displaying">
+        <div class="backgroundDiv"></div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
         <div id="player1State">Waiting...</div>
         <div id="player2State">Waiting...</div>
@@ -17,7 +19,6 @@
         <button id="SelectionPageShow">Toggle Page</button>
 
     <div class="backgroundDiv"></div>
-    <div id="IpDisplay">127.0.0.1:5500</div>
     <div id="BigBoiTextDisplay">-Server Client Page-</div>
     <div id="cardSelectionPage">
         <h1 id="selectCardHeader"> -Players Selecting Cards- </h1>
