--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -10,13 +10,13 @@
     <section id="login" class="onscreen" style="text-align: center;">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
-            style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em;" 
+            style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2);" 
         ></input><br>
         <input 
             id="loginPlayerName" value="" placeholder="Username" type="text"
-            style="margin: 20px 0; height: 30px; width: 100px; font-size: 1.2em;" 
+            style="margin: 60px 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2);" 
         ></input><br>
-        <button id="joinServerBtn" style="height:30px; width: 110px; font-size: 1.2em;">Join Server</button>
+        <button id="joinServerBtn" style="height:30px; width: 100px; font-size: 1.2em; transform: scale(2);">Join Server</button>
         <br>
         <div id="loginErrorText"></div>
         <div class="backgroundDiv"></div>
