--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
     <title>rootIndex</title>
-    <!--<link rel="stylesheet" href="index.css">-->
-    <!--<link rel="stylesheet" href="./../reset.css">-->
-    <!--<link rel="stylesheet" href="host2.css">-->
+    <link rel="stylesheet" href="./../reset.css">
     <link rel="stylesheet" href="index.css">
+    <!--<link rel="stylesheet" href="host2.css">-->
+   
     <script src="/socket.io/socket.io.js"></script>
     <script src="./JavaScript/hostSocket.js"></script>
 </head>
