In the fiwst age,in the fiwst incident... When the shafts fiwst wenghtened.. ONE STOOD. Buwned by the embews of easiness,his souw bwistewed by the stupidity of my discowd and tainted beyond basedness,he chose the path of pewpetuaw uneasiness. In his wavenous howniness he found no peace; and with boiwing cum he scouwed Gensokyo seeking intewcouwse with the youkai who wwonged him. He wowe the cwown of the Dosu Yukkuwi,and those that tasted the stwength of his danmaku named him... MANNOSUKE.

--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -9,7 +9,7 @@
     <script src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
-    <section id="bodyPregame" class="displaying">
+    <section id="bodyPregame" class="onscreen">
         <div class="backgroundDiv"></div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
         <div id="player1State">Waiting...</div>
@@ -17,33 +17,33 @@
         <div id="player2State">Waiting...</div>
     </section>
     <section id="bodyIngame">
-        <button id="SelectionPageShow">Toggle Page</button>
+        <!--<button id="SelectionPageShow">Toggle Page</button>-->
 
-    <div class="backgroundDiv"></div>
-    <div id="BigBoiTextDisplay">-Server Client Page-</div>
-    <div id="cardSelectionPage">
-        <h1 id="selectCardHeader"> -Players Selecting Cards- </h1>
-        <div id="cardPickZone"></div>
-    </div>
-    <div id="playerBoard">
-        <div id="player1Board">
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
+        <div class="backgroundDiv"></div>
+        <!--<div id="BigBoiTextDisplay">-Server Client Page-</div>-->
+        <div id="cardSelectionPage">
+            <h1 id="selectCardHeader"> -Players Selecting Cards- </h1>
+            <div id="cardPickZone"></div>
         </div>
-        <div id="player2Board">
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
-            <div class="cardSlots"></div>
-        </div>
-        <div id="scaleDiv">
-            <div id="player1Scale">0</div>
-            <div id="player2Scale">0</div>
-        </div>
+        <div id="playerBoard">
+            <div id="player1Board">
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+            </div>
+            <div id="player2Board">
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+                <div class="cardSlots"></div>
+            </div>
+            <div id="scaleDiv">
+                <div id="player1Scale">0</div>
+                <div id="player2Scale">0</div>
+            </div>
 
-    </div>
+        </div>
     </section>
     <script type="module" src="./JavaScript/main.js"></script>
 </body>
