--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <section id="login" style="text-align: center;">
+    <section id="login" style="text-align: center;" class="onscreen">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
             style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2);" 
@@ -28,7 +28,7 @@
             <div id="cardPickZone"></div>
         </div>  
     </section>
-    <section id="playArea" class="onscreen">
+    <section id="playArea">
         <div class="backgroundDiv"></div>
         <div id="actionSlots"></div>
         <div id="handPoint"></div>
