--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -6,7 +6,7 @@
     <!--<link rel="stylesheet" href="host2.css">-->
    
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./JavaScript/hostSocket.js"></script>
+    <script type="module" src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
     <section id="bodyPregame" class="onscreen">
