basic win condition check and attacks

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -34,6 +34,12 @@
         <div id="handPoint"></div>
         <button id="endTurnBtn">End Turn</button>
     </section>
+    <section id="youWin">
+        <p>Youre winner !</p>
+    </section>
+    <section id="youLose">
+        <p>you fool. you absolute buffoon.</p>
+    </section>
 
     <script type="module" src="JavaScript/main.js" ></script>
 </body>
