fixed a few bugs regarding UI

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -35,10 +35,12 @@
         <button id="endTurnBtn">End Turn</button>
     </section>
     <section id="youWin">
-        <p>Youre winner !</p>
+        <div class="backgroundDiv"></div>
+        <h1>Youre the winner!</h1>
     </section>
     <section id="youLose">
-        <p>you fool. you absolute buffoon.</p>
+        <div class="backgroundDiv"></div>
+        <h1>you fool. you absolute buffoon</h1>
     </section>
 
     <script type="module" src="JavaScript/main.js" ></script>
