mostly fixed som UI and added some cards, as well as the scale

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -24,7 +24,7 @@
     <section id="selectStarterCards" >
         <div class="backgroundDiv"></div>
         <div id="cardSelectionPage">
-            <h1 id="selectCardHeader"> -Select Cards- </h1>
+            <h1 id="selectCardHeader"> -Select X More Cards- </h1>
             <div id="cardPickZone"></div>
             <div id="selectedCards"></div>
         </div>  
