--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -9,16 +9,16 @@
     <script type="module" src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
-    <section id="bodyPregame" >
+    <section id="bodyPregame" class="onscreen">
         <div class="backgroundDiv"></div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
         <div id="player1State">Waiting...</div>
         <div class="divDiv"></div>
         <div id="player2State">Waiting...</div>
     </section>
-    <section id="bodyIngame" class="onscreen">
+    <section id="bodyIngame" >
         <!--<button id="SelectionPageShow">Toggle Page</button>-->
-        <button id="spawnEffect" style="position: absolute; background-color: rebeccapurple; font-size: 3em;">Klick here</button>
+        <!---<button id="spawnEffect" style="position: absolute; background-color: rebeccapurple; font-size: 3em;">Klick here</button>-->
         <div class="backgroundDiv"></div>
         <!--<div id="BigBoiTextDisplay">-Server Client Page-</div>-->
         <div id="cardSelectionPage">
