--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -21,10 +21,12 @@
         <!---<button id="spawnEffect" style="position: absolute; background-color: rebeccapurple; font-size: 3em;">Klick here</button>-->
         <div class="backgroundDiv"></div>
         <!--<div id="BigBoiTextDisplay">-Server Client Page-</div>-->
-        <div id="cardSelectionPage">
+        <!--<div id="cardSelectionPage">
             <h1 id="selectCardHeader"> -Players Selecting Cards- </h1>
             <div id="cardPickZone"></div>
-        </div>
+        </div>-->
+        
+
         <div id="playerBoard">
             <div id="player1Board">
                 <div class="cardSlots"></div>
