--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <section id="login" style="text-align: center;"class="onscreen" >
+    <section id="login" style="text-align: center;">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
             style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2);" 
@@ -21,7 +21,7 @@
         <div id="loginErrorText"></div>
         <div class="backgroundDiv"></div>
     </section>
-    <section id="selectStarterCards" >
+    <section id="selectStarterCards">
         <div class="backgroundDiv"></div>
         <div id="cardSelectionPage">
             <h1 id="selectCardHeader"> -Select X More Cards- </h1>
@@ -29,7 +29,17 @@
             <div id="selectedCards"></div>
         </div>  
     </section>
-    <section id="playArea" >
+    <section id="cardShop" class="onscreen">
+        <div class="backgroundDiv"></div>
+        <h1 id="cardShopHeader">-Choose Wisely-</h1>
+        <div id="itemPage">
+            <div class="card"></div>
+        </div>
+        <div id="storeCurrencyHolder">
+            <div class ="currency"></div>
+        </div>
+    </section>
+    <section id="playArea">
         <div class="backgroundDiv"></div>
         <div id="actionSlots"></div>
         <div id="handPoint"></div>
