--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -32,8 +32,9 @@
     <section id="cardShop" class="onscreen">
         <div class="backgroundDiv"></div>
         <h1 id="cardShopHeader">-Choose Wisely-</h1>
-        <div id="itemPage">
-           
+        <div id="itemPage"></div>
+        <div id="deck">
+            
         </div>
     </section>
     <section id="playArea">
