added so the player names show up on the board and in the corner of the client

--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -16,7 +16,7 @@
         <div class="divDiv"></div>
         <div id="player2State">Waiting...</div>
     </section>
-    <section id="bodyIngame">
+    <section id="bodyIngame" >
         <!--<button id="SelectionPageShow">Toggle Page</button>-->
         <!--<button id="spawnEffect" style="position: absolute; background-color: rebeccapurple; font-size: 3em;">Klick here</button>-->
 
@@ -38,7 +38,8 @@
                 <div id="player1Scale">0</div>
                 <div id="player2Scale">0</div>
             </div>
-
+            <div id="player1Name">1</div>
+            <div id="player2Name">2</div>
         </div>
     </section>
 </body>
