--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,13 +7,14 @@
     
 </head>
 <body>
+    
     <section id="login" style="text-align: center;" class="onscreen">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
             style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;" 
         ></input><br>
         <input 
-            id="loginPlayerName" value="" placeholder="Username" type="text"
+            id="loginPlayerName" value="" placeholder="Username" type="text" maxlength="40"
             style="margin: 60px 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;" 
         ></input><br>
         <button id="joinServerBtn" style="height:30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;">Join Server</button>
@@ -37,6 +38,7 @@
     </section>
     <section id="playArea" >
         <div class="backgroundDiv"></div>
+        <div id="playerName"></div>
         <div id="actionSlots"></div>
         <div id="handPoint"></div>
         <button id="endTurnBtn">End Turn</button> 
