basic background music system for host's pregame and ingame states

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <section id="login" style="text-align: center;">
+    <section id="login" style="text-align: center;" class="onscreen">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
             style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2);" 
@@ -27,9 +27,9 @@
             <h1 id="selectCardHeader"> -Select X More Cards- </h1>
             <div id="cardPickZone"></div>
             <div id="selectedCards"></div>
-        </div>  
+        </div>
     </section>
-    <section id="cardShop" class="onscreen">
+    <section id="cardShop">
         <div class="backgroundDiv"></div>
         <h1 id="cardShopHeader">-Choose Wisely-</h1>
         <div id="itemPage">
