--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="./../reset.css">
     <link rel="stylesheet" href="index.css">
     <!--<link rel="stylesheet" href="host2.css">-->
-   
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
     <section id="bodyPregame" class="onscreen">
         <div class="backgroundDiv"></div>
+        <div id="pleaseClickOnThisForAudio">Click anywhere to enable audio</div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
         <div id="player1State">Waiting...</div>
         <div class="divDiv"></div>
