--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -12,6 +12,13 @@
         <div class="backgroundDiv"></div>
         <div id="pleaseClickOnThisForAudio">Click anywhere to enable audio</div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
+        <div class="chooseMode"> 
+            <button class="selectModeButton" id="slot1Left"> &lt; </button> 
+                <div class="text"> Mode </div> 
+            <button class="selectModeButton" id="slot1Left"> &gt; </button>
+                <div class="modeText" id="currentMode">PvP</div>
+    
+        </div>
         <div id="player1State">Waiting...</div>
         <div class="divDiv"></div>
         <div id="player2State">Waiting...</div>
