--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    
+    <a href="manual.html" target="_blank" id="theManual"><div></div></a>
     <section id="login" style="text-align: center;" class="onscreen">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
