--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -44,6 +44,7 @@
         <button id="endTurnBtn">End Turn</button> 
         <div id="bloodLevel"></div>
         <button id="sacrificeCardBtn">&dagger;</button>
+        <div id="backgroundText"><span id="backgroundTextText"></span></div>
     </section>
     <section id="youWin">
         <div class="backgroundDiv"></div>
