chat system backend complete

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -12,10 +12,9 @@
     <button id="chatToggle"></button>
     <div id="chatWrapper">
         <div class="inputArea">
-            <input id="chatInput">
-            <button id="send">Send</button> 
+            <input id="chatInput" type="text">
+            <button id="chatSend">Send</button> 
         </div>
-        
     </div>
 
     <section id="login" style="text-align: center;" class="onscreen">
