fixed soem chat effects

--- a/Public/playerClient/index.html
+++ b/Public/playerClient/index.html
@@ -17,16 +17,14 @@
         </div>
     </div>
 
-    <section id="login" style="text-align: center;" class="onscreen">
+    <section id="login"class="onscreen">
         <input 
             id="serverIP" value="" placeholder="4-letter join code" type="text"
-            style="margin: 300px 0 0 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;" 
         ></input><br>
         <input 
-            id="loginPlayerName" value="" placeholder="Username" type="text" maxlength="40"
-            style="margin: 60px 0; height: 30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;" 
+            id="loginPlayerName" value="" placeholder="Username" type="text" maxlength="40" 
         ></input><br>
-        <button id="joinServerBtn" style="height:30px; width: 100px; font-size: 1.2em; transform: scale(2); color: #000;">Join Server</button>
+        <button id="joinServerBtn" >Join Server</button>
         <br>
         <div id="loginErrorText"></div>
         <div class="backgroundDiv"></div>
