--- a/Public/hostClient/index.html
+++ b/Public/hostClient/index.html
@@ -8,8 +8,9 @@
     <script type="module" src="./JavaScript/hostSocket.js"></script>
 </head>
 <body>
-    <button id="displayCardComparisionPage" style="position: absolute; top: 30px; left: 30px; z-index: 100; color:black">Toggle</button>
-    <section id="bodyPregame" class="onscreen">
+    <!--<button id="displayCardComparisionPage" style="position: absolute; top: 30px; left: 30px; z-index: 100; color:black">Toggle</button>-->
+    <button id="chatMsg" style="position: absolute; top: 30px; left: 30px; z-index: 100; color:black"> KlickHere </button>
+    <section id="bodyPregame" >
         <div class="backgroundDiv"></div>
         <div id="pleaseClickOnThisForAudio">Click anywhere to enable audio</div>
         <div id="roomCode">Join the game at:<h1>????</h1></div>
@@ -26,7 +27,7 @@
         </div>
         
     </section>
-    <section id="bodyIngame" >
+    <section id="bodyIngame" class="onscreen">
         
         <!--<button id="SelectionPageShow">Toggle Page</button>-->
         <!--<button id="spawnEffect" style="position: absolute; background-color: rebeccapurple; font-size: 3em;">Klick here</button>-->
