--- a/Public/playerClient/manual.html
+++ b/Public/playerClient/manual.html
@@ -35,7 +35,7 @@
     h2 {
       font-size: 1.3em;
       vertical-align: center;
-      margin-bottom: .5em;
+      margin-bottom: .3em;
     }
     img {
       float: left;
@@ -51,7 +51,7 @@
     <hr>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Rush.png">
-      <h2 id="aRush">Rush</h2>
+      <h2>Rush</h2>
       <p>This card attacks immediately on the same turn it's placed.</p>
     </div>
     <div class="amuletInfo">
@@ -70,7 +70,7 @@
       <p>This card can attack opposing Flying cards.</p>
     </div>
     <div class="amuletInfo">
-
+      <img src="./../assets/Amulets/Mirror.png">
       <h2>MR - Mirror</h2>
       <p>This card will copy all attributes and statistics of the opposing card when played. It has 2 attack and 2 health if there is no opposing card.</p>
     </div>
@@ -112,7 +112,7 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/AceHand.png">
       <h2>Ace Hand</h2>
-      <p>When this card is played, the player immediately draws a card from their deck (if there are any cards left).</p>
+      <p>When this card is played, the player immediately draws a card from their deck (if there are any to draw).</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Trapper.png">
