whoops one thing

--- a/Public/playerClient/manual.html
+++ b/Public/playerClient/manual.html
@@ -71,7 +71,7 @@
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Mirror.png">
-      <h2>MR - Mirror</h2>
+      <h2>Mirror</h2>
       <p>This card will copy all attributes and statistics of the opposing card when played. It has 2 attack and 2 health if there is no opposing card.</p>
     </div>
     <div class="amuletInfo">
