--- a/Public/playerClient/manual.html
+++ b/Public/playerClient/manual.html
@@ -57,7 +57,7 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Flying.png">
       <h2>Flying</h2>
-      <p>This card ignores any opposing cards (unless they have Flying or High Block) and attacks the enemy player directly. It can also only be attacked by Flying or Reach cards.</p>
+      <p>This card ignores any opposing cards (unless they have Flying or High Block) and attacks the enemy player directly. It can also only be damaged by Flying or Reach cards.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/HighBlock.png">
@@ -72,22 +72,22 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Mirror.png">
       <h2>Mirror</h2>
-      <p>This card will copy all attributes and statistics of the opposing card when played. It has 2 attack and 2 health if there is no opposing card.</p>
+      <p>When this card is played, it will copy all attributes and statistics of the opposing card. It has 2 attack and 2 health if there is no opposing card.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Drunk.png">
       <h2>Drunk</h2>
-      <p>This card's attack is randomized between 0 and 3 (inclusive) each time when it attacks.</p>
+      <p>This card's attack is randomized between 0 and 3 (inclusive) each time it attacks.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Shield.png">
       <h2>Shield</h2>
-      <p>This card will ignore the first incoming damage it takes.</p>
+      <p>This card will ignore the first attack it receives, no matter the damage it would've dealt.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/ValiantHeart.png">
       <h2>Valiant Heart</h2>
-      <p>While this card is on the board, all Humanity-type cards on the same side gain a shield at the start of the player's turn.</p>
+      <p>While this card is on your side of the board, all your Human-type cards gain a shield at the start of your turn.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/MoveR.png">
@@ -97,7 +97,7 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/HoundMaster.png">
       <h2>Hound Master</h2>
-      <p>As long as this card is on the board, the player receives a Blood Beast at the start of their turn.</p>
+      <p>While this card is on your side of the board, you receive one Blood Beast at the start of your turn.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/HeadHunter_alt.png">
@@ -107,11 +107,11 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Rebirth.png">
       <h2>Rebirth</h2>
-      <p>Upon sacrificing, this card does not perish, but only loses 1 health.</p>
+      <p>This card does not perish when sacrificed, but loses 1 health instead. (NOTE: The card can only be sacrificed once per turn, even if it has more health.)</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/AceHand.png">
-      <h2>Ace Hand</h2>
+      <h2>Sleeve Trick</h2>
       <p>When this card is played, the player immediately draws a card from their deck (if there are any to draw).</p>
     </div>
     <div class="amuletInfo">
