--- a/Public/playerClient/manual.html
+++ b/Public/playerClient/manual.html
@@ -112,7 +112,7 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/AceHand.png">
       <h2>Sleeve Trick</h2>
-      <p>When this card is played, the player immediately draws a card from their deck (if there are any to draw).</p>
+      <p>When this card is played, its owner immediately draws a card from their deck (if there are any to draw).</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Trapper.png">
@@ -128,6 +128,16 @@
       <img src="./../assets/Amulets/Dominance.png">
       <h2>Dominance</h2>
       <p>The opposing enemy card loses 1 attack.</p>
+    </div>
+    <div class="amuletInfo">
+      <img src="./../assets/Amulets/Bleeding.png">
+      <h2>Bleeding</h2>
+      <p>This card loses 1 health at the end of its owner's turn, no matter what.</p>
+    </div>
+    <div class="amuletInfo">
+      <img src="./../assets/Amulets/Unworthy.png">
+      <h2>Unworthy</h2>
+      <p>Sacrificing this card gives no blood.</p>
     </div>
   </div>
 </body>
