fixed some wierd bug with amulet display for mulitple amulet cards

--- a/Public/playerClient/manual.html
+++ b/Public/playerClient/manual.html
@@ -85,9 +85,9 @@
       <p>This card will ignore the first attack it receives, no matter the damage it would've dealt.</p>
     </div>
     <div class="amuletInfo">
-      <img src="./../assets/Amulets/ValiantHeart.png">
+      <img src="./../assets/Amulets/ValiantHearts.png">
       <h2>Valiant Heart</h2>
-      <p>While this card is on your side of the board, all your Human-type cards gain a shield at the start of your turn.</p>
+      <p>While this card is on your side of the board, all your Human-type cards gain Shield.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/MoveR.png">
@@ -97,12 +97,12 @@
     <div class="amuletInfo">
       <img src="./../assets/Amulets/HoundMaster.png">
       <h2>Hound Master</h2>
-      <p>While this card is on your side of the board, you receive one Blood Beast at the start of your turn.</p>
+      <p>Receive one Blood Beast at the start of your turn.</p>
     </div>
     <div class="amuletInfo">
-      <img src="./../assets/Amulets/HeadHunter_alt.png">
+      <img src="./../assets/Amulets/HeadHunter.png">
       <h2>Headed Hunter</h2>
-      <p>This card gains +1 attack for every health the player lost.</p>
+      <p>This card gains +1 attack for every health lost.</p>
     </div>
     <div class="amuletInfo">
       <img src="./../assets/Amulets/Rebirth.png">
